feat: add UserProfilesService testing infrastructure and persistence layer
- Create UserProfilesService.Testing project with xUnit and Shouldly
- Add Testcontainers.MongoDb for integration test isolation
- Implement IRepository<T> pattern with ProfileRepository
- Create MongoDbContext with MongoDB.EntityFrameworkCore
- Add MongoDB fixture and collection for shared test environment
- Write 6 integration tests for repository CRUD operations
- Add GitHub Actions workflow for CI/CD via NUKE
- Create TODO.md with development roadmap
- Add UserProfilesService.Contracts for shared DTOs
- Configure Keycloak authentication and JWT bearer tokens
- Update Wolverine configuration with RabbitMQ messaging

--- a/src/UserProfilesService/appsettings.Development.json
+++ b/src/UserProfilesService/appsettings.Development.json
@@ -4,5 +4,14 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Identity": {
+    "ClientId": "dfs-client",
+    "Authority": "http://localhost:8080/realms/DsF",
+    "Audience": "UserService",
+    "AuthEndpoint": "http://localhost:8080/realms/DsF/protocol/openid-connect/auth",
+    "TokenEndpoint": "https://localhost:54512/realms/DsF/protocol/openid-connect/token",
+    "RedirectUri": "https://localhost:7019/docs",
+    "Realm": "DsF"
   }
 }
