--- a/src/UserProfilesService/UserProfilesService.csproj
+++ b/src/UserProfilesService/UserProfilesService.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.2" />
+    <PackageReference Include="Microsoft.OpenApi" Version="2.0.0" />
     <PackageReference Include="Scalar.AspNetCore" Version="2.12.41" />
     <PackageReference Include="WolverineFx" Version="5.16.0" />
     <PackageReference Include="WolverineFx.RabbitMQ" Version="5.16.0" />
@@ -15,6 +17,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AppHost.ServiceDefaults\AppHost.ServiceDefaults.csproj" />
+    <ProjectReference Include="..\UserProfilesService.Contracts\UserProfilesService.Contracts.csproj" />
+    <ProjectReference Include="..\UserProfilesService.Persistence\UserProfilesService.Persistence.csproj" />
   </ItemGroup>
 
 </Project>
