- Move contracts to shared `UserProfilesService.Contracts` assembly - Implement event-driven flow: `AccountRegistered` → `CreateProfile` command → Profile creation
- `AccountRepresentation` + JSON converter for Keycloak event deserialization
- `AccountRegistered` event with proper JSON mapping
- `CreateProfile` command for profile creation workflow
- `ValidateAndSendCreateProfile` handler — validates Keycloak events
- `CreateProfileHandler` — creates profiles in MongoDB
- Integration tests for complete event→command→profile chain

- Add `AuthId` field to `ProfileDocument` for Keycloak user reference
- Add `IsDeleted` flag for soft delete support
- Rename `Documents` DbSet to `Profiles` for clarity
- Remove repository pattern — use EF Core DbContext directly

- Replace repository integration tests with event-driven integration tests
- Test full chain: Keycloak event → validation → profile creation
- Add tests for duplicate prevention and validation scenarios

--- a/.github/workflows/profiles_service.yml
+++ b/.github/workflows/profiles_service.yml
@@ -31,8 +31,5 @@ jobs:
             .nuke/temp
             ~/.nuget/packages
           key: ${{ runner.os }}-${{ hashFiles('**/global.json', '**/*.csproj', '**/Directory.Packages.props') }}
-     
-      - name: 'Set executable permissions'
-        run: chmod +x ./build.sh
       - name: 'Run: UserProfilesTesting'
-        run: ./build.sh UserProfilesTesting
+        run: ./build.cmd UserProfilesTesting
